work till 18 aug 2020

--- a/apps/renovation/src/app/main/draw-your-home/draw-home-dialog/draw-home-dialog.component.html
+++ b/apps/renovation/src/app/main/draw-your-home/draw-home-dialog/draw-home-dialog.component.html
@@ -97,21 +97,58 @@
 
                     
                 </div>
-                <div class="col-md-7">
+                <div class="col-md-7" style="scroll-behavior: auto;">
                     <div class="card" style="height: 90%; width: 90%;">
-                        <!-- <div class="card-header">
-                            View
-                        </div> -->
-                        <img class="card-img-top"
-                        src="https://s3.eu-central-1.amazonaws.com/bootstrapbaymisc/blog/24_days_bootstrap/bologna-1.jpg" alt="Bologna">
+                        <img class="card-img-top" src="../../../../assets/images/draw3.jpg" alt="Bologna">
                         <div class="card-body">
-                          <a href="#" class="card-link">
-                              Brick 10000 pc ($ .5 - $ 1 per pc )          Brick Layer ($100 ~ $150 per day)
-
-                          </a>
-                          
-                        </div>
-                      </div>
+                            <table class="table table-striped">
+                                <thead>
+                                  <tr>
+                                    <th scope="col">#</th>
+                                    <th scope="col">Item</th>
+                                    <th scope="col">Approx Amount</th>
+                                    <th scope="col">Approx Cost</th>
+                                  </tr>
+                                </thead>
+                                <tbody>
+                                  <tr>
+                                    <th scope="row">1</th>
+                                    <td>
+                                        <a href="#">
+                                            Brick
+                                        </a>
+                                    </td>
+                                    <td>1000 pc</td>
+                                    <td>300 £</td>
+                                  </tr>
+                                  <tr>
+                                    <th scope="row">2</th>
+                                    <td>
+                                        <a href="#">
+                                            Cement
+                                        </a>
+                                        </td>
+                                    <td>250 Bag</td>
+                                    <td>320 £</td>
+                                  </tr>
+                                  <tr>
+                                    <th scope="row">3</th>
+                                    <td>
+                                        <a href="#">
+                                            Rod
+                                        </a>
+                                        </td>
+                                    <td>.75 Ton</td>
+                                    <td>600 £</td>
+                                  </tr>
+                                  <tr>
+                                    <td colspan="3">Total Approx Cost</td>
+                                    <td>1220 £</td>
+                                  </tr>
+                                </tbody>
+                              </table>
+                            </div>
+                    </div>
                 </div>
             </div>
         </div>
