--- a/apps/renovation/src/app/shared/layouts/front-blocks/front-blocks.component.html
+++ b/apps/renovation/src/app/shared/layouts/front-blocks/front-blocks.component.html
@@ -17,7 +17,7 @@
         <mat-card-content style="padding:16px;">
           <mat-card-title>Design and Planning</mat-card-title>
           <mat-card-subtitle>
-            We will give you a renovated design Experiment with both 2D...
+            Draw your planning design with us for FREE like never before with built in cost extimation for each planning components.
           </mat-card-subtitle>
         </mat-card-content>
         <mat-divider></mat-divider>
@@ -56,20 +56,31 @@
         mat-card-image src="../../../../assets/img/trademan.jpg"
           alt="Photo of a Shiba Inu">
         <mat-card-content style="padding:16px;">
-          <mat-card-title>Deliver better projects</mat-card-title>
-          <mat-card-subtitle>Unlimited downloads, from $16.50/month</mat-card-subtitle>
+          <mat-card-title>Find Tradesman Near You</mat-card-title>
+          <mat-card-subtitle>
+            Draw your planning design with us for FREE like never before with built in cost extimation for each planning components.
+          </mat-card-subtitle>
         </mat-card-content>
         <mat-divider></mat-divider>
-        <mat-card-actions style="padding:16px;float: right;" layout="row" layout-align="end center">
-          <button class="mat-icon-button" aria-label="Favorite">
-            <mat-icon class="iconcolor" aria-hidden="false" aria-label="Example home icon">home</mat-icon>
-          </button>
-          <button class="mat-icon-button" aria-label="Settings">
-            <mat-icon class="iconcolor" aria-hidden="false" aria-label="Example home icon">menu</mat-icon>
-          </button>
-          <button class="mat-icon-button" aria-label="Share">
-            <mat-icon class="iconcolor" aria-hidden="false" aria-label="Example home icon">share</mat-icon>
-          </button>
+        
+        <mat-card-actions style="padding: 0px;" layout="row" layout-align="end center">
+          <div>
+            <button style="float: left;padding: 14px;margin-left: 10px; color: #a3a3f7;" mat-button>
+              <tvs-draw-home [master]="master2"></tvs-draw-home>
+              <!-- Draw Now -->
+            </button>
+          </div>
+          <div style="padding:16px;float: right;" >
+            <button class="mat-icon-button" aria-label="Favorite">
+              <mat-icon class="iconcolor" aria-hidden="false" aria-label="Example home icon">home</mat-icon>
+            </button>
+            <button class="mat-icon-button" aria-label="Settings">
+              <mat-icon class="iconcolor" aria-hidden="false" aria-label="Example home icon">menu</mat-icon>
+            </button>
+            <button class="mat-icon-button" aria-label="Share">
+              <mat-icon class="iconcolor" aria-hidden="false" aria-label="Example home icon">share</mat-icon>
+            </button>
+          </div>
         </mat-card-actions>
   
   
@@ -85,20 +96,30 @@
         mat-card-image src="../../../../assets/img/feedback.jpg"
           alt="Photo of a Shiba Inu">
         <mat-card-content style="padding:16px;">
-          <mat-card-title>Deliver better projects</mat-card-title>
-          <mat-card-subtitle>Unlimited downloads, from $16.50/month</mat-card-subtitle>
+          <mat-card-title>Plan Your Home Now</mat-card-title>
+          <mat-card-subtitle>
+            Plan your planning application with our built in knowledge database and submit through planning portal
+          </mat-card-subtitle>
         </mat-card-content>
         <mat-divider></mat-divider>
-        <mat-card-actions style="padding:16px;float: right;" layout="row" layout-align="end center">
-          <button class="mat-icon-button" aria-label="Favorite">
-            <mat-icon class="iconcolor" aria-hidden="false" aria-label="Example home icon">home</mat-icon>
-          </button>
-          <button class="mat-icon-button" aria-label="Settings">
-            <mat-icon class="iconcolor" aria-hidden="false" aria-label="Example home icon">menu</mat-icon>
-          </button>
-          <button class="mat-icon-button" aria-label="Share">
-            <mat-icon class="iconcolor" aria-hidden="false" aria-label="Example home icon">share</mat-icon>
-          </button>
+        <mat-card-actions style="padding: 0px;" layout="row" layout-align="end center">
+          <div>
+            <button style="float: left;padding: 14px;margin-left: 10px; color: #a3a3f7;" mat-button>
+              <tvs-draw-home [master]="master3"></tvs-draw-home>
+              <!-- Draw Now -->
+            </button>
+          </div>
+          <div style="padding:16px;float: right;" >
+            <button class="mat-icon-button" aria-label="Favorite">
+              <mat-icon class="iconcolor" aria-hidden="false" aria-label="Example home icon">home</mat-icon>
+            </button>
+            <button class="mat-icon-button" aria-label="Settings">
+              <mat-icon class="iconcolor" aria-hidden="false" aria-label="Example home icon">menu</mat-icon>
+            </button>
+            <button class="mat-icon-button" aria-label="Share">
+              <mat-icon class="iconcolor" aria-hidden="false" aria-label="Example home icon">share</mat-icon>
+            </button>
+          </div>
         </mat-card-actions>
   
   
@@ -115,20 +136,27 @@
           alt="Photo of a Shiba Inu">
         <mat-card-content style="padding:16px;">
           <mat-card-title>Deliver better projects</mat-card-title>
-          <mat-card-subtitle>Unlimited downloads, from $16.50/month</mat-card-subtitle>
+          <mat-card-subtitle>Search for products nearby you and throughout the UK. Some fake text Some fake text Some fake text Some fake text.</mat-card-subtitle>
         </mat-card-content>
         <mat-divider></mat-divider>
-        <mat-card-actions style="padding:16px;float: right;" layout="row" layout-align="end center">
-          <button class="mat-icon-button" aria-label="Favorite">
-            <mat-icon class="iconcolor" aria-hidden="false" aria-label="Example home icon">home</mat-icon>
-          </button>
-          <button class="mat-icon-button" aria-label="Settings">
-            <mat-icon class="iconcolor" aria-hidden="false" aria-label="Example home icon">menu</mat-icon>
-          </button>
-          <button class="mat-icon-button" aria-label="Share">
-            <mat-icon class="iconcolor" aria-hidden="false" aria-label="Example home icon">share</mat-icon>
-          </button>
-	<button style="display:none;" mat-button></button>
+        <mat-card-actions style="padding: 0px;" layout="row" layout-align="end center">
+          <div>
+            <button style="float: left;padding: 14px;margin-left: 10px; color: #a3a3f7;" mat-button>
+              <tvs-draw-home [master]="master"></tvs-draw-home>
+              <!-- Draw Now -->
+            </button>
+          </div>
+          <div style="padding:16px;float: right;" >
+            <button class="mat-icon-button" aria-label="Favorite">
+              <mat-icon class="iconcolor" aria-hidden="false" aria-label="Example home icon">home</mat-icon>
+            </button>
+            <button class="mat-icon-button" aria-label="Settings">
+              <mat-icon class="iconcolor" aria-hidden="false" aria-label="Example home icon">menu</mat-icon>
+            </button>
+            <button class="mat-icon-button" aria-label="Share">
+              <mat-icon class="iconcolor" aria-hidden="false" aria-label="Example home icon">share</mat-icon>
+            </button>
+          </div>
         </mat-card-actions>
   
   
