--- a/apps/renovation/src/app/shared/layouts/nav-bar/nav-bar.component.html
+++ b/apps/renovation/src/app/shared/layouts/nav-bar/nav-bar.component.html
@@ -10,17 +10,27 @@
             </h1>
             <nav class="nav-menu d-none d-lg-block">
                 <ul>
-                    <li class="active"><a (click)="homePage2()"  routerLink="/advice-center">Advice Center</a></li>
+                    <!-- <li class="active"><a (click)="homePage2()"  routerLink="/advice-center">Advice Center</a></li> -->
+                    <li class="active"><a href="http://localhost/building/test-page/sample-page/">Advice Center</a></li>
                     <li><a class="chaildnev"><tvs-draw-home [master]="master"></tvs-draw-home></a></li>
                     <li><a (click)="homePage2()" routerLink="/find-tradesmen">Search Tradesman</a></li>
-                    <li><a href="#portfolio">Join with us</a></li>
+                    <li><a style="color: #fff;" (click)="openModal('custom-modal-1')">{{message}}</a></li>
+                    <!-- <li><button (click)="openModal('custom-modal-1')">Open Modal 1</button></li> -->
+                    
                 </ul>
             </nav>
             <!-- <a href="#about" class="get-started-btn scrollto">Post a job</a> -->
-            <a href="#about" class="get-started-btn scrollto">Sign Up</a>
+            <a routerLink="/registration" class="get-started-btn scrollto">Sign Up</a>
         </div>
     </header>
 </section>
+
+<tvs-jw-modal id="custom-modal-1">
+   
+    <button (click)="closeModal('custom-modal-1');">Close</button>
+</tvs-jw-modal>
+
+
 
 <tvs-slider *ngIf="isDisplay"></tvs-slider>
 
