--- a/apps/renovation/src/app/shared/layouts/slider/slider.component.html
+++ b/apps/renovation/src/app/shared/layouts/slider/slider.component.html
@@ -1,5 +1,10 @@
 <!-- <section id="hero" class="d-flex align-items-center"> -->
-<section id="hero">
+
+
+    
+
+
+<section id="hero" style="padding-top: 0px;">
   <div class="container">
       <div class="row" id="footer">
           <div class="col-lg-12 d-flex 
