--- a/apps/renovation/src/app/main/microservices/login/user-login/modal.component.html
+++ b/apps/renovation/src/app/main/microservices/login/user-login/modal.component.html
@@ -7,14 +7,14 @@
         <div class="row">
             <div class="col-lg-6 col-md-6 log-det">
                 <div class="small-logo">
-                    <i class="fab fa-asymmetrik"></i> Style Login Hi! {{userName}}
+                    <i class="fa fa-sign-in fa-10x"></i>
                 </div>
                 <p class="dfmn">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pharetra ut dui in dictum. </p>
                 
 
 
                 <div class="text-box-cont">
-                    <form>
+                    <!-- <form> -->
                         <div class="input-group mb-3">
                             <div class="input-group-prepend">
                                 <span style="padding-left: 10px;" class="input-group-text" id="basic-addon1"><i style="padding-right: 20px;" class="fa fa-user"></i></span>
@@ -22,7 +22,9 @@
                             <input style="margin-bottom: 0px;" 
                                     type="text" class="form-control" 
                                     placeholder="Username" aria-label="Username" 
-                                    formControlName="email"
+                                    [(ngModel)]="user.email"
+                                    id="email"
+                                    name="email"
                                     aria-describedby="basic-addon1">
                         </div>
                          <div class="input-group mb-3">
@@ -31,16 +33,21 @@
                             </div>
                             <input style="margin-bottom: 0px;" 
                                     type="text" class="form-control" 
-                                    placeholder="Username" aria-label="Username" 
-                                    formControlName="password"
+                                    placeholder="Username" 
+                                    aria-label="Username" 
+                                    [(ngModel)]="user.password"
+                                    id="password"
+                                    name="password"
                                     aria-describedby="basic-addon1">
                         </div>
                         
                         <div class="input-group center">
-                            <button (click)="login()" class="btn btn-danger btn-round">SIGN IN</button>
-                            <ng-content></ng-content>
+                            <button (click)="login()" class="btn btn-danger btn-round">
+                                SIGN IN
+                            </button>
+                            <!-- <ng-content></ng-content> -->
                         </div> 
-                    </form>
+                    <!-- </form> -->
                     
                     <div class="row">
                         <p class="forget-p">Don't have an account? <span>Sign Up Now</span></p>
@@ -67,9 +74,9 @@
                <div class="inn-cover">
                    <div class="ditk-inf">
                        <div class="small-logo">
-                    <i class="fab fa-asymmetrik"></i> Style Login
+                        <i class="fa fa-user-plus" aria-hidden="true"></i>
                 </div>
-                        <h2 style="color: #b7bfcc;" class="w-100">Don't Have an Account </h2>
+                        <h2 style="color: #b7bfcc;" class="w-100">Don't Have an Account? </h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pharetra ut dui in dictum. Simply Create your account by clicking the Signup Button</p>
                         <a href="#">
                         <button type="button" class="btn btn-outline-light">SIGN UP</button>
