displayed item category list on tradesman module

--- a/apps/renovation/src/app/main/microservices/login/user-login/modal.component.less
+++ b/apps/renovation/src/app/main/microservices/login/user-login/modal.component.less
@@ -355,14 +355,14 @@ body.tvs-jw-modal-open {
         font-weight: 600;
         margin-left: 5px; }
   
-  .box-de {
+  .box-de1 {
     background: url("../../../../../assets/images/gallery/sv-5.jpg") no-repeat;
     background-size: cover;
     padding: 0px;
     // border-top-right-radius: 25px;
     // border-bottom-right-radius: 25px; 
 }
-    .box-de .inn-cover {
+    .box-de1 .inn-cover {
       display: flex;
     //   background-color: rgba(200, 35, 51, 0.7);
       position: absolute;
@@ -372,42 +372,42 @@ body.tvs-jw-modal-open {
       border-bottom-right-radius: 25px;
       padding: 30px; }
       @media screen and (max-width: 767px) {
-        .box-de .inn-cover {
+        .box-de1 .inn-cover {
           border-top-right-radius: 0px;
           border-bottom-left-radius: 25px;
           position: relative; } }
     @media screen and (max-width: 767px) {
-      .box-de {
+      .box-de1 {
         border-bottom-left-radius: 25px; } }
-    .box-de .ditk-inf {
+    .box-de1 .ditk-inf {
       margin: auto;
       align-items: center;
       text-align: center;
       color: #FFF; }
-      .box-de .ditk-inf .small-logo {
+      .box-de1 .ditk-inf .small-logo {
         position: relative;
         top: 0px;
         margin-bottom: 20px;
         font-size: 1.3rem; }
-        .box-de .ditk-inf .small-logo i {
+        .box-de1 .ditk-inf .small-logo i {
           font-size: 44px; }
-      .box-de .ditk-inf p {
+      .box-de1 .ditk-inf p {
         margin-top: 15px;
         font-size: .9rem; }
-      .box-de .ditk-inf .btn-outline-light {
+      .box-de1 .ditk-inf .btn-outline-light {
         border-radius: 50px;
         box-shadow: none;
         padding: 5px 20px;
         margin-top: 25px; }
-    .box-de .small-logo {
+    .box-de1 .small-logo {
       position: absolute;
       top: 20px;
       left: 20px;
       color: #FFF; }
-      .box-de .small-logo i {
+      .box-de1 .small-logo i {
         font-size: 22px;
         margin-right: 5px; }
-    .box-de .foter-credit {
+    .box-de1 .foter-credit {
       position: absolute;
       bottom: 10px;
       right: 6%;
@@ -415,10 +415,10 @@ body.tvs-jw-modal-open {
       padding: 10px;
       color: #FFF;
       font-weight: 300; }
-      .box-de .foter-credit a {
+      .box-de1 .foter-credit a {
         color: #FFF; }
       @media screen and (max-width: 767px) {
-        .box-de .foter-credit {
+        .box-de1 .foter-credit {
           display: none; } }
   
   .sup {
