--- a/apps/renovation/src/app/shared/layouts/front-blocks/front-blocks.component.html
+++ b/apps/renovation/src/app/shared/layouts/front-blocks/front-blocks.component.html
@@ -4,7 +4,7 @@
   }
 </style>
 
-<div class="container-fluid">
+<div style="padding-top: 30px;" class="container-fluid">
   <div class="row" style="margin-top: 45px;">
 
     <div class="col-lg-3 d-flex flex-column justify-content-center" 
