--- a/apps/renovation/src/app/main/microservices/components/find-tradesmen/find-tradesmen.component.html
+++ b/apps/renovation/src/app/main/microservices/components/find-tradesmen/find-tradesmen.component.html
@@ -211,36 +211,76 @@
     box-shadow: none;
 }
 
+.bs-example{
+        margin: 20px;
+    }
 </style>
 
 <div id="divbody" class="container-fluid py-5">
 
+    
+
+
+
+
+
+
+
+
+
+
+
     <div class="row">
+        <!-- <div class="col-md-12">
+            <pre>{{parentData | json}}</pre>
+            
+        </div> -->
         <div class="col-lg-3 mx-auto" style="padding-right: 0px;">
             <ul style="list-style-type: none;">
                 <li class="list-group shadow customshadaw" style="margin-right: 0px; margin-left: 0px;">
                     <div class="container" style="padding-top: 16px;padding-bottom: 16px;">
                         <div id="accordion" class="accordion">
                             <div class="card mb-0">
-                                <div class="card-header collapsed" data-toggle="collapse" href="#collapseOne">
-                                    <a class="card-title"> Item 1 </a>
+                                <!-- <ul *ngFor="let person of tradesmanService.getData(0)"> -->
+
                                     
+
+
+
+
+
+
+
+
+
+
+                                    <ul *ngFor="let item of parentData; index as i;">
+                                        <div class="card-header collapsed" 
+                                                    data-toggle="collapse" 
+                                                    [attr.data-target]="'#test' + i">
+                                            <a class="card-title">{{item.itemCategoryName}}</a>
+                                        </div>
+                                        <li *ngFor="let item2 of item.children;">
+                                            <div id="test{{i}}" class="card-body collapse" data-parent="#accordion">
+                                                <p>{{item2.itemCategoryName}}</p>
+                                            </div>
+                                        </li>
+                                    </ul>
+                                
+
+                                <!-- <div class="card-header collapsed" data-toggle="collapse" href="#collapseOne">
+                                    <a class="card-title"> Item 1 </a>
                                 </div>
                                 <div id="collapseOne" class="card-body collapse" data-parent="#accordion">
-                                    <p>Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS. </p>
+                                    <p>Anim pariatur cliche reprehenderit</p>
                                 </div>
                                 <div class="card-header collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
                                     <a class="card-title"> Item 2 </a>
                                 </div>
                                 <div id="collapseTwo" class="card-body collapse" data-parent="#accordion">
-                                    <p>Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS. </p>
-                                </div>
-                                <div class="card-header collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
-                                    <a class="card-title"> Item 3 </a>
-                                </div>
-                                <div id="collapseThree" class="collapse" data-parent="#accordion">
-                                    <div class="card-body">Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. samus labore sustainable VHS. </div>
-                                </div>
+                                    <p>enim eiusmod high life accusamus terry</p>
+                                </div> -->
+                               
                             </div>
                         </div>
                     </div>
@@ -372,7 +412,7 @@
                         <div class="col-md-3 lastbox">
                             <div class="row">
                                 <div class="col-md-12">
-                                    <button class="btn pull-right" style="border: 0px; background-color: transparent">
+                                    <button (click)="addToFavorite(item)" class="btn pull-right" style="border: 0px; background-color: transparent">
                                         <mat-icon style="color:orange">favorite</mat-icon>
                                     </button>
                                     <button class="btn pull-right"
