--- a/apps/renovation/src/app/main/microservices/login/user-login/modal.component.html
+++ b/apps/renovation/src/app/main/microservices/login/user-login/modal.component.html
@@ -32,26 +32,26 @@
                                 <span style="padding-left: 10px;" class="input-group-text" id="basic-addon1"><i style="padding-right: 20px;" class="fa fa-lock"></i></span>
                             </div>
                             <input style="margin-bottom: 0px;" 
-                                    type="text" class="form-control" 
-                                    placeholder="Username" 
+                                    type="password" class="form-control" 
+                                    placeholder="Password" 
                                     aria-label="Username" 
                                     [(ngModel)]="user.password"
                                     id="password"
                                     name="password"
                                     aria-describedby="basic-addon1">
                         </div>
-                        
+                        <div class="row">
+                            <p class="forget-p">Forgot password? <span>Email Now</span></p>
+                        </div>
                         <div class="input-group center">
                             <button (click)="login()" class="btn btn-danger btn-round">
                                 SIGN IN
                             </button>
-                            <!-- <ng-content></ng-content> -->
+                            <ng-content class="btn btn-danger btn-round"></ng-content>
                         </div> 
                     <!-- </form> -->
                     
-                    <div class="row">
-                        <p class="forget-p">Don't have an account? <span>Sign Up Now</span></p>
-                    </div>
+                    
                      <div class="row">
                         <p class="small-info">Connect With Social Media</p>
                     </div>   
@@ -70,7 +70,7 @@
 
 
             </div>
-            <div class="col-lg-6 col-md-6 box-de">
+            <div class="col-lg-6 col-md-6 box-de1">
                <div class="inn-cover">
                    <div class="ditk-inf">
                        <div class="small-logo">
@@ -79,7 +79,7 @@
                         <h2 style="color: #b7bfcc;" class="w-100">Don't Have an Account? </h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pharetra ut dui in dictum. Simply Create your account by clicking the Signup Button</p>
                         <a href="#">
-                        <button type="button" class="btn btn-outline-light">SIGN UP</button>
+                        <button (click)="openSignup()" type="button" class="btn btn-outline-light">SIGN UP</button>
                         </a>
                     </div>
                </div>
