--- a/apps/renovation/src/app/shared/layouts/nav-bar/nav-bar.component.scss
+++ b/apps/renovation/src/app/shared/layouts/nav-bar/nav-bar.component.scss
@@ -1,3 +1,23 @@
+
+
+.badge {
+    border-radius: 0;
+    font-size: 10px;
+    line-height: 1;
+    padding: .375rem .5625rem;
+    font-weight: normal
+}
+
+.badge-outline-primary {
+    // color: #405189;
+    border: 1px solid #405189
+}
+
+.badge.badge-pill {
+    border-radius: 10rem
+}
+
+
 .noborder{
     border: none;
 }
