--- a/apps/renovation/src/app/shared/layouts/slider/slider.component.html
+++ b/apps/renovation/src/app/shared/layouts/slider/slider.component.html
@@ -6,7 +6,7 @@
 
 <section id="hero" style="padding-top: 0px;">
   <div class="container">
-      <div class="row" id="footer">
+      <!-- <div class="row" id="footer">
           <div class="col-lg-12 d-flex 
           flex-column justify-content-center 
           pt-4 pt-lg-0 order-2 order-lg-1"
@@ -25,7 +25,10 @@
                   </div>
               </div>
           </div>
-      </div>
+      </div> -->
+
+
+      
       <tvs-front-blocks></tvs-front-blocks>
       <div class="d-lg-flex" style="margin-top: 45px;">
         <!-- <a href="#about" class="btn-get-started scrollto">Post a job</a> -->
