--- a/apps/renovation/src/app/main/microservices/tradesman/tradesman-detail/tradesman-detail.component.html
+++ b/apps/renovation/src/app/main/microservices/tradesman/tradesman-detail/tradesman-detail.component.html
@@ -1,1 +1,110 @@
-<p>tradesman-detail works!</p>
+<style>
+    .space{
+      line-height: 27px;
+    }
+    .lidefaule{
+      color: #007bff;
+      text-decoration: none;
+      background-color: transparent;
+    }
+    .lidefaule :hover{
+      color: #0056b3;
+      text-decoration: underline;
+      cursor: pointer;
+    }
+
+    .company{
+        /* font-family: "Open Sans", Arial, sans-serif;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 1rem;
+    line-height: 1.5;
+    letter-spacing: 0em;
+    -webkit-font-smoothing: antialiased; */
+    display: inline;
+    color: rgb(102, 102, 102);
+    word-break: break-word;
+    overflow-wrap: break-word;
+    margin: 0px;
+    padding: 0px;
+    overflow: visible;
+    }
+  </style>
+  <div class="container">
+    <div class="row" style="padding-top: 50px;">
+      <div class="col-lg-8">
+        <p class="lead">
+            Here at JB Plumbing and Heating we specialise in repairing, servicing and installing central heating systems and full bathroom refurbishments, down to leaks and blockages throughout Manchester and Greater Manchester. We pride ourselves on customer satisfaction and take great pride in the high quality work in which we undertake. Our engineers hold industry recognised accreditation such as Gas Safe.
+        </p>
+        <p class="lead">
+           We are selected partners with various boiler manufactures including ATAG. We at JB Plumbing and Heating understand that replacing your boiler or bathroom can sometimes be a daunting prospect and aim to make it as stress-free as possible. We offer the best solutions to meet the customers specific needs. We have return custom from our loyal customers, which we feel is a testament to our professionalism and great service that we provide. Whichever job, big or small, we have the expertise to cover it. We offer a free on site consultation of the works to be undertaken at a time to suit you. Here the works will be discussed thoroughly while checking that customers specific requirements can be provided.
+        </p>
+        <hr>
+        
+  
+  
+        
+  
+    </div>
+    <div class="col-md-4 company">
+        <div class="card mb-3" [routerLink]="['/tradesmen-detail',7]" target="_blank">
+            <div class="row no-gutters">
+                
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h3 class="card-title" style="font-weight: bold;">Drainflo Ltd</h3>
+                        <p class="card-text">
+                            Mr Lewis Odell</p>
+                        <span style="margin-left: -7px;float: left;margin-top: -3px;margin-right: -22px;color: orange;"
+                            class="material-icons">
+                            location_on
+                        </span>
+                        <p style="margin-left: 16px;" class="card-text">
+                            Eccles, Manchester</p>
+                        <p class="card-text">10 (11 Reviews)</p>
+                        <p class="card-text">
+                            Website</p>
+    
+                    </div>
+                </div>
+                <div class="col-md-4 card-img-wrap">
+                    <img style="margin-top: 18px;height: 90px;width: 90px;border-radius: 50%;"
+                        src="../../../../../assets/tradesman/1.jpg" class="card-img" alt="...">
+                </div>
+            </div>
+        </div>
+    
+    
+        <div style="color: #2479a2;font-weight: 700;padding-bottom: 24px;font-size: 22px;line-height: 32px;" class="my-4">
+          Photos & videos
+      </div>
+        <div class="card mb-3" [routerLink]="['/tradesmen-detail',7]" target="_blank">
+          <div class="row no-gutters">
+              
+              <div class="col-md-12">
+                  <div class="card-body">
+                    <ngx-gallery [options]="galleryOptions" [images]="galleryImages"></ngx-gallery>
+                  </div>
+              </div>
+          </div>
+      </div>
+        
+
+        
+        <div class="card my-4">
+          <h5 class="card-header">Categories</h5>
+          <div class="card-body">
+            <div class="row">
+              <div class="col-lg-12">
+                <ul class="list-unstyled mb-0" style="list-style: circle;">
+                  <li class="space lidefaule">
+                    <!-- <a>{{title.title}}</a> -->
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
