--- a/apps/renovation/src/app/shared/layouts/nav-bar/nav-bar.component.html
+++ b/apps/renovation/src/app/shared/layouts/nav-bar/nav-bar.component.html
@@ -10,7 +10,7 @@
             </h1>
             <nav class="nav-menu d-none d-lg-block">
                 <ul>
-                    <!-- <li class="active"><a (click)="homePage2()"  routerLink="/advice-center">Advice Center</a></li> -->
+                    <li class="active"><a (click)="homePage2()"  routerLink="/advice-center">R & D Form</a></li>
                     <li class="active"><a href="http://localhost/building/test-page/sample-page/">Advice Center</a></li>
                     <li><a class="chaildnev"><tvs-draw-home [master]="master"></tvs-draw-home></a></li>
                     <li><a (click)="homePage2()" routerLink="/find-tradesmen">Search Tradesman</a></li>
