added draw home template

--- a/apps/renovation/src/app/main/microservices/login/registration/modal.component.html
+++ b/apps/renovation/src/app/main/microservices/login/registration/modal.component.html
@@ -17,10 +17,11 @@
                                     type="text" class="form-control" 
                                     placeholder="Name" aria-label="firstName" 
                                     [(ngModel)]="user.userName"
-                                    id="userName"
+                                    
                                     name="userName"
                                     aria-describedby="basic-addon1">
                         </div>
+                        <!-- id="userName" -->
                          <div class="input-group mb-3">
                             <div class="input-group-prepend">
                                 <span style="padding-left: 10px;" class="input-group-text" id="basic-addon1"><i style="padding-right: 20px;" class="fa fa-lock"></i></span>
@@ -30,10 +31,11 @@
                                     placeholder="Email" 
                                     aria-label="Username" 
                                     [(ngModel)]="user.email"
-                                    id="email"
+                                    
                                     name="email"
                                     aria-describedby="basic-addon1">
                         </div>
+                        <!-- id="email" -->
                         <div class="input-group mb-3">
                             <div class="input-group-prepend">
                                 <span style="padding-left: 10px;" class="input-group-text" id="basic-addon1"><i style="padding-right: 20px;" class="fa fa-user"></i></span>
@@ -42,10 +44,11 @@
                                     type="text" class="form-control" 
                                     placeholder="Password" aria-label="Username" 
                                     [(ngModel)]="user.password"
-                                    id="password"
+                                    
                                     name="password"
                                     aria-describedby="basic-addon1">
                         </div>
+                        <!-- id="password" -->
                          <div class="input-group mb-3">
                             <div class="input-group-prepend">
                                 <span style="padding-left: 10px;" class="input-group-text" id="basic-addon1"><i style="padding-right: 20px;" class="fa fa-lock"></i></span>
@@ -55,11 +58,11 @@
                                     placeholder="Confirm Password" 
                                     aria-label="Username" 
                                     
-                                    id="password"
+                                   
                                     name="password"
                                     aria-describedby="basic-addon1">
                         </div>
-                        
+                        <!-- id="password" -->
                         <div class="input-group center">
                             <div class="checkbox">
                                 <label>
@@ -85,10 +88,11 @@
                                     type="text" class="form-control" 
                                     placeholder="First Name" aria-label="Username" 
                                     [(ngModel)]="userProfile.firstName"
-                                    id="firstName"
+                                    
                                     name="firstName"
                                     aria-describedby="basic-addon1">
                         </div>
+                        <!-- id="firstName" -->
                          <div class="input-group mb-3">
                             <div class="input-group-prepend">
                                 <span style="padding-left: 10px;" class="input-group-text" id="basic-addon1"><i style="padding-right: 20px;" class="fa fa-lock"></i></span>
@@ -98,10 +102,11 @@
                                     placeholder="Last Name" 
                                     aria-label="lastName" 
                                     [(ngModel)]="userProfile.lastName"
-                                    id="lastName"
+                                    
                                     name="lastName"
                                     aria-describedby="basic-addon1">
                         </div>
+                        <!-- id="lastName" -->
                         <div class="input-group mb-3">
                             <div class="input-group-prepend">
                                 <span style="padding-left: 10px;" class="input-group-text" id="basic-addon1"><i style="padding-right: 20px;" class="fa fa-user"></i></span>
@@ -110,10 +115,11 @@
                                     type="text" class="form-control" 
                                     placeholder="Post Code" aria-label="postCode" 
                                     [(ngModel)]="userProfile.postCode"
-                                    id="postCode"
+                                    
                                     name="postCode"
                                     aria-describedby="basic-addon1">
                         </div>
+                        <!-- id="postCode" -->
                          <div class="input-group mb-3">
                             <div class="input-group-prepend">
                                 <span style="padding-left: 10px;" class="input-group-text" id="basic-addon1"><i style="padding-right: 20px;" class="fa fa-lock"></i></span>
@@ -123,10 +129,11 @@
                                     placeholder="TradeLicence" 
                                     aria-label="tradeLicence" 
                                     [(ngModel)]="userProfile.tradeLicence"
-                                    id="tradeLicence"
+                                    
                                     name="tradeLicence"
                                     aria-describedby="basic-addon1">
                         </div>
+                        <!-- id="tradeLicence" -->
                         <div class="input-group mb-3">
                             <div class="input-group-prepend">
                                 <span style="padding-left: 10px;" class="input-group-text" id="basic-addon1"><i style="padding-right: 20px;" class="fa fa-user"></i></span>
@@ -135,10 +142,11 @@
                                     type="text" class="form-control" 
                                     placeholder="Cell No" aria-label="mobilNo" 
                                     [(ngModel)]="userProfile.mobilNo"
-                                    id="mobilNo"
+                                    
                                     name="mobilNo"
                                     aria-describedby="basic-addon1">
                         </div>
+                        <!-- id="mobilNo" -->
                          <div class="input-group mb-3">
                             <div class="input-group-prepend">
                                 <span style="padding-left: 10px;" class="input-group-text" id="basic-addon1"><i style="padding-right: 20px;" class="fa fa-lock"></i></span>
@@ -148,11 +156,11 @@
                                     placeholder="Address" 
                                     aria-label="address" 
                                     [(ngModel)]="userProfile.address"
-                                    id="address"
+                                    
                                     name="address"
                                     aria-describedby="basic-addon1">
                         </div>
-
+                        <!-- id="address" -->
 
                         <div class="input-group center">
                             <div class="checkbox">
