--- a/apps/renovation/src/styles.scss
+++ b/apps/renovation/src/styles.scss
@@ -18,3 +18,11 @@
 @import '~bootstrap/dist/css/bootstrap.css';
 // html, body { height: 100%; }
 // body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+// for splitter style
+
+@import '../../../node_modules/@syncfusion/ej2-base/styles/material.css';
+@import '../../../node_modules/@syncfusion/ej2-icons/styles/material.css';
+// @import '../../../node_modules/@syncfusion/ej2-buttons/styles/material.css';
+@import '../../../node_modules/@syncfusion/ej2-angular-layouts/styles/material.css';
+
