--- a/apps/renovation/src/app/main/microservices/login/user-login/modal.component.html
+++ b/apps/renovation/src/app/main/microservices/login/user-login/modal.component.html
@@ -23,10 +23,11 @@
                                     type="text" class="form-control" 
                                     placeholder="Username" aria-label="Username" 
                                     [(ngModel)]="user.email"
-                                    id="email"
+                                   
                                     name="email"
                                     aria-describedby="basic-addon1">
                         </div>
+                        <!-- id="email" -->
                          <div class="input-group mb-3">
                             <div class="input-group-prepend">
                                 <span style="padding-left: 10px;" class="input-group-text" id="basic-addon1"><i style="padding-right: 20px;" class="fa fa-lock"></i></span>
@@ -36,10 +37,11 @@
                                     placeholder="Password" 
                                     aria-label="Username" 
                                     [(ngModel)]="user.password"
-                                    id="password"
+                                    
                                     name="password"
                                     aria-describedby="basic-addon1">
                         </div>
+                        <!-- id="password" -->
                         <div class="row">
                             <p class="forget-p">Forgot password? <span>Email Now</span></p>
                         </div>
